feat(backend): passport github

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,11 @@ DB_NAME=yuhat
 
 # Jwt Secrect
 JWT_SECRET=yuhat-jwt-secret
+
+# Google Auth Credentials
+GOOGLE_CLIENT_ID=yuhat-google
+GOOGLE_CLIENT_SECRET=yuhat-google-secret
+
+# Google Auth Credentials
+GITHUB_CLIENT_ID=yuhat-github
+GITHUB_CLIENT_SECRET=yuhat-github-secret
