--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "flowbite": "^2.3.0",
     "ng-recaptcha": "^12.0.2",
     "ngx-socket-io": "^4.5.0",
     "rxjs": "~7.8.0",
