--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
@@ -40,6 +41,7 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "handlebars": "^4.7.8",
+    "ioredis": "^5.3.2",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
