--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:dev": "ng serve --configuration development",
-    "build": "ng build",
+    "start:dev": "ng serve --configuration development --host 0.0.0.0 --disable-host-check",
+    "build": "ng build --aot",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
